--- a/assets/css/templates/_admin.scss
+++ b/assets/css/templates/_admin.scss
@@ -168,6 +168,7 @@
 	z-index: 2;
 	opacity: 1;
 	max-height: 50px;
+	width: auto;
 	transition: opacity 0.2s ease-in-out,
 				padding 0.2s ease-in-out 0.2s,
 				max-height 0.2s ease-in-out 0.2s;
